feat(loan): update loan status and get loan list endponits
