# handler/loan_handler.go
@@ -15,6 +15,8 @@ type LoanHandler struct {
 
 type ILoanHandler interface {
 	CreateNewLoan(c *gin.Context)
+	UpdateLoanStatus(c *gin.Context)
+	GetLoanList(c *gin.Context)
 }
 
 func NewLoanHandler(
@@ -57,6 +59,57 @@ func (h LoanHandler) CreateNewLoan(c *gin.Context) {
 	}
 
 	data, err := h.loanUcase.CreateNewLoan(currentUser.UUID, payload)
+	if err != nil {
+		h.respWriter.HTTPCustomErr(c, err)
+		return
+	}
+
+	h.respWriter.HTTPJsonOK(c, data)
+}
+
+// @Summary Update loan status (admin only)
+// @Tags Loan
+// @Accept json
+// @Produce json
+// @Param uuid path string true "Loan UUID"
+// @Param loan body dto.UpdateLoanStatusReq true "update loan status rquest"
+// @Success 200 {object} dto.BaseJSONResp{data=dto.UpdateLoanStatusRespData}
+// @Security OAuth2Password
+// @Router /loans/{uuid}/status [post]
+func (h LoanHandler) UpdateLoanStatus(c *gin.Context) {
+	loanUUID := c.Param("uuid")
+	var payload dto.UpdateLoanStatusReq
+	if err := c.ShouldBindJSON(&payload); err != nil {
+		h.respWriter.HTTPJson(c, 400, "invalid payload", err.Error(), nil)
+		return
+	}
+
+	data, err := h.loanUcase.UpdateLoanStatus(loanUUID, payload)
+	if err != nil {
+		h.respWriter.HTTPCustomErr(c, err)
+		return
+	}
+
+	h.respWriter.HTTPJsonOK(c, data)
+}
+
+// @Summary Get loan list
+// @Description Get loan list
+// @Tags Loan
+// @Accept json
+// @Produce json
+// @Param params query dto.GetLoanListReq true "Query parameters"
+// @Success 200 {object} dto.BaseJSONResp{data=dto.GetLoanListRespData}
+// @Security OAuth2Password
+// @Router /loans [get]
+func (h LoanHandler) GetLoanList(c *gin.Context) {
+	var params dto.GetLoanListReq
+	if err := c.ShouldBindQuery(&params); err != nil {
+		h.respWriter.HTTPJson(c, 400, "invalid payload", err.Error(), nil)
+		return
+	}
+
+	data, err := h.loanUcase.GetLoanList(params)
 	if err != nil {
 		h.respWriter.HTTPCustomErr(c, err)
 		return
